# django-tag-me

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_OG.txt  settings.py  tox.ini  version.toml
.github/: .git-commit-template.txt  config
.github/ISSUE_TEMPLATE/: chore.md  documentation-request.md
.github/archive/: main_PR.yaml
.github/scripts/: generate_coverage_report.py  update_changelog.py
.github/workflows/: main_PR.yaml  release.yaml  test.yml
archived/: helpers.py  migrate.py  tags.py  test_custom_commands.py
docs/: requirements.txt
docs/html/: .buildinfo  alpine_multi_select.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/.doctrees/: alpine_multi_select.doctree  environment.pickle  index.doctree
docs/html/_sources/: alpine_multi_select.rst.txt  index.rst.txt
docs/html/_static/: copybutton.js
docs/html/discussion/: alpine-multi-select.html  index-discussion.html  multi-select-init.html
docs/html/how-to/: how-to-custom-list.html  how-to-set-up-multiselect-component.html  how-to-tag-parser.html  index-how-to.html
docs/source/: conf.py  index.rst
docs/source/discussion/: alpine-multi-select.rst  index-discussion.rst  multi-select-init.rst
docs/source/how-to/: how-to-FK-based-lookup-system.md  how-to-asset-loading.md  how-to-config.rst  how-to-contributing.rst  how-to-custom-list.rst  how-to-set-up-multiselect-component.rst  how-to-standalone-widget.md  how-to-tag-me-management-command.rst  how-to-tag-parser.rst  how-to-tag-sync.rst  how-to-tagged-field.rst  howto-vite-alpine-htmx-integration.md  index-how-to.rst  quickstart.rst
docs/source/reference/: TAG-ME-MIGRATION-REFERENCE.md  index-reference.rst  ref-cstm-migrate.rst  ref-cstm-tags.rst  ref-form-mixin.rst  ref-helpers.rst  ref-list-formatter.rst  ref-models.rst  ref-sync-model.rst  ref-tag-parser.rst  ref-view-mixin.rst
example/: LICENSE.rst  README.rst  version.toml
example/.github/: ISSUE_TEMPLATE.md
example/blog/: admin.py  apps.py  forms.py  models.py  operations.py  reports.py  urls.py  views.py
example/blog/articles/: admin.py  forms.py  models.py  urls.py  views.py
example/blog/blog/: __init__.py  settings.py  urls.py
example/blog/migrations/: 0001_initial.py  0002_initial.py
example/blog/tags/: forms.py  models.py  urls.py  views.py
example/blog/templates/: base.html  index.html  login.html
example/config/requirements/: base.txt  local.txt  production.txt  test.txt
example/config/settings/: __init__.py  base.py  local.py  production.py  staging.py  test.py
example/core/: __init__.py  asgi.py  urls.py  wsgi.py
example/core/utils/: context_processors.py
example/core/views/: __init__.py
example/templates/: base.html
example/templates/account/: login.html  login_users_table.html  logout.html
example/templates/blog/: all_tags.html  authors.html  create_article.html  create_article_tag.html  dashboard.html  user_tags.html
example/tests/: conftest.py  test_custom_user.py
example/theme/static_src/: package-lock.json
example/users/: admin.py  apps.py  forms.py  models.py  views.py
example/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: tag-me.js
frontend/src/css/: _styles.css  styles.css  tag-me.css
frontend/src/js/: alpine-component.js  cookie-manager.js
github/: tox.ini
github/workflows/: release.yml
static/tag_me/: tag_me_alpine_multiselect.js
tag_me/: __init__.py  admin.py  apps.py  assets.py  forms.py  models.py  registry.py  urls.py  views.py  widgets.py
tag_me/db/: mixins.py
tag_me/db/forms/: fields.py  mixins.py
tag_me/db/models/: fields.py
tag_me/forms/: __init__.py  forms.py  mixins.py
tag_me/management/commands/: add_user_tags.py  createsuperuser_for_testing.py  migrate.py  populate_tags.py  tag_me.py  tags.py
tag_me/migrations/: 0001_initial.py  0002_alter_usertag_name.py  0002_initial.py  0002_systemtag_search_tags_usertag_search_tags_and_more.py  0003_remove_usertag_unique_user_field_tag_and_more.py  0003_systemtag_comment_systemtag_field_name_and_more.py  0004_fk_lookup_refactor.py  0004_usertag_unique_user_field_tag.py  0005_remove_taggedfieldmodel_unique_tagged_field_model_and_more.py  0006_remove_systemtag_tag_me_sys_tagged_field_idx_and_more.py
tag_me/models/: __init__.py  fields.py  models.py
tag_me/tag_me/: forms.py  models.py
tag_me/templates/: clearable_file_input.html  tag_me_base.html  tag_me_select_widget.html
tag_me/templatetags/: tag_filters.py  tag_me.py  tag_me_assets.py
tag_me/utils/: collections.py  helpers.py  orphan_merger.py  parser.py  tag_mgmt_system.py
tag_me/views/: __init__.py  mixins.py  views.py
tests/: admin.py  apps.py  conftest.py  forms.py  manage.py  models.py  operations.py  reports.py  settings.py  test_assets.py  test_collections.py  test_custom_commands.py  test_deep_review_fixes.py  test_field_mixins.py  test_fk_migration.py  test_form_field.py  test_form_mixins.py  test_helpers.py  test_mixins.py  test_model_field.py  test_model_properties.py  test_model_rename_resilience.py  test_models.py  test_parser.py  test_registry.py  test_tag_mgmt_system.py  test_urls.py  test_views.py  test_widget.py  test_widget_db.py  test_widget_standalone.py  test_widget_unit.py  try_testing-stuff.py  urls.py  views.py
tests/db/: test_fk_migration.py  test_model_field.py  test_models.py
tests/forms/: test_form_mixins.py  test_widget.py
tests/migrations/: 0001_initial.py  0002_alter_tagtestbase_name.py  0002_alter_tagtestbase_tags.py  0003_alter_tagtestbase_tags.py  0004_tagtestbase_search_tags_alter_tagtestbase_tags.py
tests/system/: test_orphan_merger.py  test_registry.py  test_tag_mgmt_system.py
tests/templatetags/: test_templatetags.py
tests/unit/: test_assets.py  test_collections.py  test_form_field.py  test_parser.py
tests/views/: test_view_mixins.py  test_views.py
(+82 files in other folders)
