[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["Django>=4.0"]
description = "A simple approach to Django tagging"
keywords = ["Django Tag Me", "Django", "django", "django tagging"]
license = {file = "LICENSE" }
maintainers = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]
name = "django-tag-me"
readme = "README.rst"
requires-python = ">=3.10"
version = "2024.12.16.4"

[project.optional-dependencies]
dev = [
    "django-extensions",
    "hypothesis",
    "pyright",
    "pytest",
]

[project.urls]
Repository = "https://github.com/imAsparky/django-tag-me"
Tracker = "https://github.com/imAsparky/django-tag-me/issues"
# Documentation = "https://django-tag-me.readthedocs.io"

[tool.coverage.run]
omit = [
    'tests/test_*.py',
    # '*/migrations/*'
]

[tool.setuptools]
packages = ["tag_me"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 79
target-version = ['py312']