[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tag-me"
version = "2025.04.13.1"
description = "A simple approach to Django tagging" 
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}

authors = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]
maintainers = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]

keywords = ["Django Tag Me", "Django", "django", "django tagging", "Django tags", "Django field tags"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["Django>=4.0"]

[project.optional-dependencies]
dev = [
    "django-extensions",
    "hypothesis",
    "pyright",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "tox", 
]

[project.urls]
Repository = "https://github.com/imAsparky/django-tag-me"
Documentation = "https://django-tag-me.readthedocs.io"
Tracker = "https://github.com/imAsparky/django-tag-me/issues" 
Changelog = "https://github.com/imAsparky/django-tag-me/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["."], include = ["tag_me", "tag_me.*"]}}

[tool.setuptools.package-data]
tag_me = [
    "static/**/*",
    "templates/**/*",
    "templatetags/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["tests/*", "example/*", "archived/*"]

[tool.distutils.commands]
pre-build = "rm -rf **/__pycache__ *.pyc"

[tool.coverage.run]
omit = [
    'tests/test_*.py',
    'archived/*.py',
    # '*/migrations/*'
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 79
target-version = ['py312']